hphp/hack/test/sound_dynamic/typing/awaitable.bad.php.exp
File "awaitable.bad.php", line 10, characters 25-27:
Method  `box` in class `D` is not dynamically callable. (Typing[4402])
  File "awaitable.bad.php", line 11, characters 12-22:
  Invalid return type
  File "awaitable.bad.php", line 10, characters 42-44:
  Expected `dynamic` because method must be callable in a dynamic context
  File "awaitable.bad.php", line 11, characters 16-18:
  But got `Box`
